feat(importer): add loader improvements and brarchive support
Loader:
- stripSubpackPrefix for overlay in subpack directory files
- languages.json skip (standard JSON list, not .lang format)
- textures_list.json (with 's') recognized as TEXTURE_INDEX
- readContent for TEXTURE_INDEX/METADATA uses parseJsonElement
- texture decode error handling (IOException catch)
- SPLASHES classification for splashes.json
- BRARCHIVE classification with codec routing

Material:
- BrMaterial.version field (string, materials have 'version': '1.0.0')
- Shared codec extracts version before dispatching entries

brarchive:
- BrArchiveDecoder: parses 8B magic + entryCount entries + merged JSON
- Routing: animations/controllers/entity/attachables/particles/render